---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod out { let in_1 = 0; }
---

Some(
    Spanned(
        Module {
            name: Some(
                Spanned(
                    "out",
                    4..7,
                ),
            ),
            items: [
                Spanned(
                    Binding {
                        name: Spanned(
                            "in_1",
                            14..18,
                        ),
                        rhs: Spanned(
                            Int(0),
                            21..22,
                        ),
                    },
                    10..23,
                ),
            ],
        },
        0..25,
    ),
)

--- Errors ---
[]
---
